common-applications/control/api/metadata.yaml
kind: Service
apiVersion: v1
metadata:
  name: metadata-service
spec:
  type: ExternalName
  externalName: main-server.git-metadata.svc.cluster.local
