common-applications/control/api/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($http_origin ~ '^https:\/\/moocstudio\.openeuler\.(sh|org)$') {
        set $allow_origin $http_origin;
      }
      if ($http_origin ~ '^https:\/\/moocstudio\.opengauss\.org$') {
        set $allow_origin $http_origin;
      }
      if ($http_origin ~ '^https:\/\/preview\.moocstudio\.openeuler\.sh$') {
        set $allow_origin $http_origin;
      }
      more_set_headers "Access-Control-Allow-Origin: $allow_origin";
      more_set_headers "Access-Control-Allow-Credentials: true";
      more_set_headers "Access-Control-Allow-Methods: GET, PUT, POST, DELETE,PATCH, OPTIONS";
      more_set_headers "Access-Control-Allow-Headers: DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization";
    nginx.ingress.kubernetes.io/proxy-body-size: 100M
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: api-ingress
spec:
  tls:
    - hosts:
        - api.osinfra.cn
      secretName: api-cert-secrets
  rules:
    - host: api.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: mailman-service
              servicePort: 8001
            path: /mailman(/|$)(.*)
          - backend:
              serviceName: nginx-purger-service
              servicePort: 80
            path: /nginx-purger(/|$)(.*)
          - backend:
              serviceName: sca-api-gateway-service
              servicePort: 8020
            path: /sca/gateway(/|$)(.*)
          - backend:
              serviceName: metadata-service
              servicePort: 80
            path: /metadata(/|$)(.*)
